[tool.poetry]
name = "generate-from-notion"
version = "0.1.0"
description = ""
authors = ["Hayate Nakano <nakanodesu@gmail.com>"]
readme = "README.md"
packages = [{include = "generate_from_notion"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
