[project]
name = "generate-from-notion"
version = "0.1.0"
description = ""
authors = [{ name = "Hayate Nakano", email = "nakanodesu@gmail.com" }]
dependencies = [
    "beautifulsoup4~=4.12.2",
    "pygments~=2.15.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["mypy~=1.3.0", "black~=23.3.0", "isort~=5.12.0"]

[tool.hatch.metadata]
allow-direct-references = true
